--- a/app/src/main/res/layout/activity_room_list.xml
+++ b/app/src/main/res/layout/activity_room_list.xml
@@ -6,37 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".RoomListActivity">
     <LinearLayout
-        android:id="@+id/toolbar_room"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginBottom="5dp"
-        android:orientation="horizontal"
-        android:background="@color/colorPrimary">
-        <ImageButton
-            android:id="@+id/ImageButtonBack2"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="30dp"
-            android:layout_width="40dp"
-            android:scaleType="fitXY"
-            android:layout_height="40dp"
-            android:src="@drawable/ic_baseline_keyboard_backspace_24"
-            android:background="@color/colorPrimary"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:text="Danh sách bài viết"
-            android:textColor="@color/white"
-            android:textSize="22sp"/>
-    </LinearLayout>
-    <LinearLayout
         android:id="@+id/header_title_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_below="@id/toolbar_room">
+        android:layout_marginBottom="10dp">
         <TextView
             android:id="@+id/TextViewTotalResult"
             android:layout_width="wrap_content"
