--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -26,6 +26,11 @@
         android:label="@string/menu_warn"
         tools:layout="@layout/fragment_warn" />
     <fragment
+        android:id="@+id/nav_contactus"
+        android:name="com.trinhtien2212.findhomerental.ui.home.ContactFragment"
+        android:label="@string/menu_contactus"
+        tools:layout="@layout/fragment_contact" />
+    <fragment
         android:id="@+id/nav_admin"
         android:name="com.trinhtien2212.findhomerental.ui.home.AdminFragment"
         android:label="@string/menu_admin"
