--- a/app/src/main/res/drawable-v24/borderbuttonexit.xml
+++ b/app/src/main/res/drawable-v24/borderbuttonexit.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient android:startColor="#D2AF00"
-        android:endColor="#D2AF00"
+    <gradient android:startColor="@color/colorPrimary"
+        android:endColor="@color/colorPrimary"
         android:angle="270" />
     <corners android:radius="7dp" />
 </shape>
